--- a/portfolio.html
+++ b/portfolio.html
@@ -18,20 +18,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    
-    <link rel="stylesheet" href="./css/main.min.css"/>
+
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body>
-    <header class="header">
+  <body class="no-scroll">
+    <header class="header header-flex">
       <div class="container header__container">
         <nav class="navigation">
-          <a lang="en" href="" class="link navigation__logo-base"
-            ><span class="logo__web">Web</span><span class="logo__Stu-header">Studio</span></a
-          >
+          <a lang="en" href="" class="link navigation__logo-base">
+            <span class="logo__web">Web</span><span class="logo__Stu-header">Studio</span>
+          </a>
           <ul class="navigation__list list">
-            <li><a href="./index.html" class="navigation__link link">Студия</a></li>
-            <li><a href="./portfolio.html" class="navigation__link link choice">Портфолио</a></li>
-            <li><a href="" class="navigation__link link">Контакты</a></li>
+            <li><a href="./index.html" class="navigation__link link">Студія</a></li>
+            <li><a href="./portfolio.html" class="navigation__link link choice">Портфоліо</a></li>
+            <li><a href="" class="navigation__link link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="navigation__list list">
@@ -39,8 +39,8 @@
             <a lang="en" href="mailto:info@devstudio.com" class="header__mail link">
               <svg class="header__icon" width="16" height="12">
                 <use href="./images/icon.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com
+            </a>
           </li>
           <li class="header__contact">
             <a lang="en" href="telto:+380961111111" class="header__tel link">
@@ -50,6 +50,53 @@
             </a>
           </li>
         </ul>
+        <button type="button" class="open__menu" mobile-menu-open>
+          <svg class="icon__menu" width="24px" height="16px">
+            <use href="./images/icon.svg#icon-menu_mob"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob__menu is-hidden" mobile-menu>
+        <dir class="container">
+          <div class="mob__container">
+            <button type="button" class="close__menu" mobile-menu-close>
+              <svg class="icon__menu" width="20px" height="20px">
+                <use href="./images/icon.svg#icon-close_mob"></use>
+              </svg>
+            </button>
+            <nav class="mob__navigation">
+              <ul class="mob__navigation-list list">
+                <li class="mob__navigation-item">
+                  <a href="./index.html" class="mob__navigation-link link " data-menu-close
+                    >Студія</a
+                  >
+                </li>
+                <li class="mob__navigation-item">
+                  <a href="./portfolio.html" class="mob__navigation-link link choice">Портфоліо</a>
+                </li>
+                <li class="mob__navigation-item">
+                  <a href="" class="mob__navigation-link link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <ul class="mob__contact-list list">
+            <li class="mob__contact-tel">
+              <a lang="en" href="tel:+380961111111" class="mob__tel link">+38 096 111 11 11</a>
+            </li>
+            <li class="mob__contact-mail">
+              <a lang="en" href="mailto:info@devstudio.com" class="mob___mail link"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="mob__soc-list list">
+            <li class="mob__soc-item"><a href="" class="mob__link link">Instagram</a></li>
+            <li class="mob__soc-item"><a href="" class="mob__link link">Twitter</a></li>
+            <li class="mob__soc-item"><a href="" class="mob__link link">Facebook</a></li>
+            <li class="mob__soc-item"><a href="" class="mob__link link">LinkedIn</a></li>
+          </ul>
+        </dir>
       </div>
     </header>
     <main class="main">
@@ -67,7 +114,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img src="./images/portfolio1.jpg" alt="notebook" width="370" height="294" />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio1-mob-1x.jpg 1x,
+                     ./images/portfolio1-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio1.jpg" alt="notebook" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -83,7 +136,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img src="./images/portfolio2.jpg" alt="poster" width="370" height="294" />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio2-mob-1x.jpg 1x,
+                     ./images/portfolio2-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio2.jpg" alt="poster" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -99,12 +158,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img
-                    src="./images/portfolio3.jpg"
-                    alt="restaurant logo"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio3-mob-1x.jpg 1x,
+                     ./images/portfolio3-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio3.jpg" alt="restaurant logo" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -120,7 +180,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img src="./images/portfolio4.jpg" alt="headphones" width="370" height="294" />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio4-mob-1x.jpg 1x,
+                     ./images/portfolio4-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio4.jpg" alt="headphones" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -136,7 +202,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img src="./images/portfolio5.jpg" alt="boxes" width="370" height="294" />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio5-mob-1x.jpg 1x,
+                     ./images/portfolio5-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio5.jpg" alt="boxes" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -152,7 +224,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img src="./images/portfolio6.jpg" alt="monitor" width="370" height="294" />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio6-mob-1x.jpg 1x,
+                     ./images/portfolio6-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio6.jpg" alt="monitor" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -168,7 +246,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img src="./images/portfolio7.jpg" alt="book" width="370" height="294" />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio7-mob-1x.jpg 1x,
+                     ./images/portfolio7-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio7.jpg" alt="book" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -184,7 +268,13 @@
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
                 <div class="portfolio-link-block">
-                  <img src="./images/portfolio8.jpg" alt="project LAB" width="370" height="294" />
+                  <picture>
+                    <source
+                     srcset="./images/portfolio8-mob-1x.jpg 1x,
+                     ./images/portfolio8-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio8.jpg" alt="project LAB" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -199,8 +289,13 @@
             </li>
             <li class="portfolio-list-block">
               <a href="" class="portfolio-link-title link">
-                <div class="portfolio-link-block">
-                  <img src="./images/portfolio9.jpg" alt="notebook" width="370" height="294" />
+                <div class="portfolio-link-block"><picture>
+                    <source
+                     srcset="./images/portfolio9-mob-1x.jpg 1x,
+                     ./images/portfolio9-mob-2x.jpg 2x"
+                     media="(max-width:767px">
+                     <img src="./images/portfolio9.jpg" alt="notebook" width="450" height="294" />
+                  </picture>
                   <p class="portfolio-link-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -275,7 +370,7 @@
             </li>
           </ul>
         </div>
-          <form>
+        <form>
           <div class="mailing">
             <h3 class="mailing-title">Підпишіться на розсилку</h3>
             <div class="mailing-box">
@@ -291,5 +386,6 @@
         </form>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
