--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </button>
       </div>
       <div class="mob__menu is-hidden" mobile-menu>
-        <dir class="container">
+        <div class="container">
           <div class="mob__container">
             <button type="button" class="close__menu" mobile-menu-close>
               <svg class="icon__menu" width="20px" height="20px">
@@ -95,7 +95,7 @@
             <li class="mob__soc-item"><a href="" class="mob__link link">Facebook</a></li>
             <li class="mob__soc-item"><a href="" class="mob__link link">LinkedIn</a></li>
           </ul>
-        </dir>
+        </div>
       </div>
     </header>
     <main class="main">
@@ -376,16 +376,16 @@
             <li class="team-item">
               <picture>
                 <source
-                  srcset="./images/mihail-mobil-1x.jpg 1x, ./images/mihail-mobil-2x.jpg 2x"
+                  srcset="../images/mihail-mobil-1x.jpg 1x, ../images/mihail-mobil-2x.jpg 2x"
                   media="(max-width:767px)"
                 />
                 <source
-                  srcset="./images/mihail-tab-1x.jpg 1x, ./images/mihail-tab-2x.jpg 2x"
-                  media="(max-width:1199)px"
+                  srcset="../images/mihail-tab-1x.jpg 1x, ../images/mihail-tab-2x.jpg 2x"
+                  media="(max-width:1199px)"
                 />
                 <source
-                  srcset="./images/mihail-desk-1x.jpg 1x, ./images/mihail-desk-2x.jpg 2x"
-                  media="(min-width:1200)px"
+                  srcset="../images/mihail-desk-1x.jpg 1x, ../images/mihail-desk-2x.jpg 2x"
+                  media="(min-width:1200px)"
                 />
                 <img src="./images/misha.jpg" alt="фото Михаил Ермаково" width="450" height="460" />
               </picture>
