--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         </button>
       </div>
       <div class="mob__menu is-hidden" mobile-menu>
-        <dir class="container">
+        <div class="container">
           <div class="mob__container">
             <button type="button" class="close__menu" mobile-menu-close>
               <svg class="icon__menu" width="20px" height="20px">
@@ -96,7 +96,7 @@
             <li class="mob__soc-item"><a href="" class="mob__link link">Facebook</a></li>
             <li class="mob__soc-item"><a href="" class="mob__link link">LinkedIn</a></li>
           </ul>
-        </dir>
+        </div>
       </div>
     </header>
     <main class="main">
@@ -221,7 +221,7 @@
                   <picture>
                     <source
                       srcset="./images/portfolio4-mob-1x.jpg 1x, ./images/portfolio4-mob-2x.jpg 2x"
-                      media="(max-width:767px"
+                      media="(max-width:767px)"
                     />
                     <source
                       srcset="./images/portfolio4-tab-1x.jpg 1x, ./images/portfolio4-tab-2x.jpg 2x"
