--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         <ul class="navigation__contact list">
           <li class="header__contact">
             <a lang="en" href="mailto:info@devstudio.com" class="header__mail link">
-              <svg class="header__iconnavigation__contact" width="16" height="12">
+              <svg class="header__icon navigation__contact" width="16" height="12">
                 <use href="./images/icon.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
@@ -483,7 +483,7 @@
               <button type="submit" class="btn-mailing">
                 Підписатися
                 <svg class="mailing-icon">
-                  <use href="./images/icon.svg#icon-send" width="18" height="18"></use>
+                  <use href="./images/icon.svg#icon-send" width="24" height="24"></use>
                 </svg>
               </button>
             </div>
