--- a/index.html
+++ b/index.html
@@ -376,15 +376,15 @@
             <li class="team-item">
               <picture>
                 <source
-                  srcset="../images/mihail-mobil-1x.jpg 1x, ../images/mihail-mobil-2x.jpg 2x"
+                  srcset="./images/mihail-mobil-1x.jpg 1x, ./images/mihail-mobil-2x.jpg 2x"
                   media="(max-width:767px)"
                 />
                 <source
-                  srcset="../images/mihail-tab-1x.jpg 1x, ../images/mihail-tab-2x.jpg 2x"
+                  srcset="./images/mihail-tab-1x.jpg 1x, ./images/mihail-tab-2x.jpg 2x"
                   media="(max-width:1199px)"
                 />
                 <source
-                  srcset="../images/mihail-desk-1x.jpg 1x, ../images/mihail-desk-2x.jpg 2x"
+                  srcset="./images/mihail-desk-1x.jpg 1x, ./images/mihail-desk-2x.jpg 2x"
                   media="(min-width:1200px)"
                 />
                 <img src="./images/misha.jpg" alt="фото Михаил Ермаково" width="450" height="460" />
@@ -544,7 +544,7 @@
               <button type="submit" class="btn-mailing">
                 Підписатися
                 <svg class="mailing-icon">
-                  <use href="./images/icon.svg#icon-send" width="18" height="18"></use>
+                  <use href="./images/icon.svg#icon-send" width="24" height="24"></use>
                 </svg>
               </button>
             </div>
